Fixed formatting issues with map and word cloud overlap

--- a/election_poll_2016/style.css
+++ b/election_poll_2016/style.css
@@ -4,10 +4,16 @@ body {
     font: 11px sans-serif;
 }
 
-.clouds{
-    padding-top: 500px;
+#clouds{
+    text-align: center;
+    display: relative;
+    margin-top: 500px;
+    /*padding-top: 250px;*/
 }
 
+.title{
+    margin-bottom: -20px;
+}
 
 .buttons{
     text-align: center;
